Update some point

--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
     <nav class="pages-nav">
       <div class="logo">
         <a href="#0">
-          <img src="img/logo.png" alt="" />
+          <img src="images/logo.png" alt="logo" />
         </a>
       </div>
+      
       <div class="pages-nav__item nav__list-item">
         <a class="link link--page hover-target" href="#page-home">Home</a>
       </div>
@@ -57,12 +58,6 @@
       <div class="pages-nav__item nav__list-item">
         <a class="link link--page hover-target" href="#page-resume">Resume</a>
       </div>
-      <!-- <div class="pages-nav__item nav__list-item">
-        <a class="link link--page hover-target" href="#page-work">Portfolio</a>
-      </div> -->
-      <!-- <div class="pages-nav__item nav__list-item">
-        <a class="link link--page hover-target" href="#page-blog">Blog</a>
-      </div> -->
       <div class="pages-nav__item nav__list-item">
         <a class="link link--page hover-target" href="#page-contact">Contact</a>
       </div>
@@ -76,7 +71,7 @@
             <div class="col-md-4">
               <div class="img valign">
                 <div class="pattern">
-                  <img src="./assets/images/person.jpg" alt="" />
+                  <img src="./images/person.jpg" alt="profile" />
                 </div>
               </div>
             </div>
@@ -93,18 +88,18 @@
                     instrument saw celebrated unpleasant.
                   </p>
 
-                  <a href="#0" class="butn butn-bg mt-30">
+                  <a href="./CV-Myo-Myint-Ko.pdf" download="cv-mmk" class="butn butn-bg mt-30">
                     <span>Download C.V</span>
                   </a>
                   <div class="social">
-                    <a href="#0" class="icon">
+                    <a href="https://www.facebook.com/virust.mmk/" target="_blank" class="icon">
                       <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="#0" class="icon">
+                    <a href="https://twitter.com/MyoMyintKo4" target="_blank" class="icon">
                       <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="#0" class="icon">
-                      <i class="fas fa-basketball-ball"></i>
+                    <a href="https://www.linkedin.com/in/myo-myint-ko-670aa5185/" target="_blank" class="icon">
+                      <i class="fab fa-linkedin-in"></i>
                     </a>
                   </div>
                 </div>
@@ -128,8 +123,8 @@
 
                 <div class="text-center">
                   <h5 class="intro">
-                    I am a creative <b>web designer</b> from USA, California. I
-                    love to talk with you about our unique services.
+                    I am a <b>web developer</b> from Yangon, Myanmar. I
+                    love to create helpful web application.
                   </h5>
                   <p class="mb-15">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -138,7 +133,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Maecenas in pulvinar neque.
                   </p>
-                  <a href="#0" class="butn butn-bg">
+                  <a href="./CV-Myo-Myint-Ko.pdf" download="cv-mmk" class="butn butn-bg">
                     <span>Download C.V</span>
                   </a>
                   <a href="#0" class="butn butn-bord">
@@ -153,7 +148,7 @@
                         <span class="icon"><i class="fas fa-phone"></i></span>
                         <div class="cont">
                           <h6>Phone</h6>
-                          <p>+959 785 260 805</p>
+                          <p><a href="tel:+959785260805">+959 785 260 805</a></p>
                         </div>
                       </div>
                     </div>
@@ -164,7 +159,7 @@
                         ></span>
                         <div class="cont">
                           <h6>Email</h6>
-                          <p>mmk@myomyintko.com</p>
+                          <p><a href="mailto:mmk@myomyintko.com">mmk@myomyintko.com</a></p>
                         </div>
                       </div>
                     </div>
@@ -244,7 +239,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-5 simg bg-img" data-background="./assets/images/profile.jpg"></div>
+            <div class="col-lg-5 simg bg-img" data-background="images/profile_2.jpg"></div>
           </div>
         </div>
       </div>
@@ -335,23 +330,10 @@
                     <div>
                       <div class="row">
                         <div class="col-md-5 col-sm-3">
-                          <span class="date">2018 - <b>Current</b></span>
-                        </div>
-                        <div class="col-md-7 col-sm-9 right">
-                          <h6>at Playground Design</h6>
-                          <h4>
-                            Philosophy at <a href="#">Yadanabon University</a>
-                          </h4>
-                        </div>
-                      </div>
-                    </div>
-                    <div>
-                      <div class="row">
-                        <div class="col-md-5 col-sm-3">
                           <span class="date">2019 - <b>Current</b></span>
                         </div>
                         <div class="col-md-7 col-sm-9 right">
-                          <h6>at Playground Design</h6>
+                          <h6>at Playground</h6>
                           <h4>
                             Computer Science at
                             <a href="#">Harvard University</a>
@@ -362,10 +344,23 @@
                     <div>
                       <div class="row">
                         <div class="col-md-5 col-sm-3">
+                          <span class="date">2018 - <b>Current</b></span>
+                        </div>
+                        <div class="col-md-7 col-sm-9 right">
+                          <h6>at Playground</h6>
+                          <h4>
+                            Philosophy at <a href="#">Yadanabon University</a>
+                          </h4>
+                        </div>
+                      </div>
+                    </div>
+                    <div>
+                      <div class="row">
+                        <div class="col-md-5 col-sm-3">
                           <span class="date">2017 - <b>2019</b></span>
                         </div>
                         <div class="col-md-7 col-sm-9 right">
-                          <h6>at Playground Design</h6>
+                          <h6>at Playground</h6>
                           <h4>
                             Start Learning Programming at
                             <a href="#">TastySoft Software Co., Ltd</a>
@@ -430,7 +425,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-5 simg bg-img" data-background="assets/images/person_3.jpg"></div>
+            <div class="col-lg-5 simg bg-img" data-background="images/person_3.jpg"></div>
           </div>
         </div>
       </div>
@@ -458,7 +453,7 @@
                         <span class="icon"><i class="fas fa-phone"></i></span>
                         <div class="cont">
                           <h6>Phone</h6>
-                          <p>+959 785 260 805, +959 964 524 696</p>
+                          <p><a href="tel:+959785260805">+959 785 260 805</a> &comma; <a href="tel:+959964524696">+959 964 524 696</a></p>
                         </div>
                       </div>
                     </div>
@@ -469,7 +464,7 @@
                         ></span>
                         <div class="cont">
                           <h6>Email</h6>
-                          <p>mmk@myomyintko.com</p>
+                          <p><a href="mailto:mmk@myomyintko.com">mmk@myomyintko.com</a></p>
                         </div>
                       </div>
                     </div>
@@ -566,7 +561,7 @@
                 </form>
               </div>
             </div>
-            <div class="col-lg-5 simg bg-img" data-background="img/5.jpg"></div>
+            <div class="col-lg-5 simg bg-img" data-background="images/map.jfif"></div>
           </div>
         </div>
       </div>
