--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <meta name="author" content="" />
     <title>Myo Myint Ko</title>
-    <link rel="shortcut icon" href="img/favicon.png" />
+    <link rel="shortcut icon" href="images/logo.png" />
 
     <!-- Google Fonts -->
     <link
